--- a/m/mpfr4/package.xml
+++ b/m/mpfr4/package.xml
@@ -17,7 +17,7 @@
         </description>
 
         <sources>
-            <file src="mpfr-3.1.5.tar.xz" subdir="sources"
+            <file src="mpfr4-3.1.5.tar.xz" subdir="sources"
                 sha256sum="015fde82b3979fbe5f83501986d328331ba8ddf008c1ff3da3c238f49ca062bc"/>
         </sources>
 
