--- a/m/musl/package.xml
+++ b/m/musl/package.xml
@@ -31,21 +31,18 @@
                 sha256sum="937185a5e5d721050306cf106507a006c3f1f86d86cd550024ea7be909071011"/>
             <file src="patches.01.tar.gz" subdir="patches"
                 sha256sum="d1c3b2f6c1bc8f6b781db10b12fdaa08e821948328461c1c9d238d79e63cb949"/>
+            <file src="patches.bolt.tar.gz" subdir="patches"
+                sha256sum="d59a52e45c971157d5d05d7f4412044bef421ade90a275d8f93e0713702dde9e"/>
         </sources>
 
         <patches>
             <patchset subdir="sources">
-                <!--
                 <file src="patches/musl-cdefs.patch"/>
-                <file src="patches/musl-unsafe-str-funcs.patch"/>
-                -->
             </patchset>
         </patches>
 
-        <!-- build rules -->
         <xi:include href="rules.xml"/>
     </source>
 
-    <!-- changelog -->
     <xi:include href="changelog.xml"/>
 </control>
