--- a/c/libcap-ng/package.xml
+++ b/c/libcap-ng/package.xml
@@ -6,24 +6,24 @@
 
     <source name="libcap-ng" architecture-independent="false">
         <description>
-            <summary>Development and header files for libcap-ng</summary>
-            <p>
-            This library implements the user-space interfaces to the POSIX
-            1003.1e capabilities available in Linux kernels. These capabilities are
-            a partitioning of the all powerful root privilege into a set of distinct
-            privileges.
-            </p>
-            <p>
-            The libcap-ng library is intended to make programming with POSIX
-            capabilities much easier than the traditional libcap library.
-            </p>
+	    <summary>An alternate POSIX capabilities library</summary>
+	    <p>
+	    This library implements the user-space interfaces to the POSIX
+	    1003.1e capabilities available in Linux kernels. These capabilities are
+	    a partitioning of the all powerful root privilege into a set of distinct
+	    privileges.
+	    </p>
+	    <p>
+	    The libcap-ng library is intended to make programming with POSIX
+	    capabilities much easier than the traditional libcap library.
+	    </p>
         </description>
 
         <sources>
             <file src="libcap-ng-0.7.7.tar.gz" subdir="sources"
                 sha256sum="615549ce39b333f6b78baee0c0b4ef18bc726c6bf1cca123dfd89dd963f6d06b"/>
             <file src="patches.03.tar.gz" subdir="patches"
-                sha256sum="f7ab7474a2d6a18fc9227e0383961b3a21ff113591f5fd318cb4c7dbf6c6a88a"/>
+                sha256sum="673123075a4d2baeb339e484090d683f538aca4c39d77d48b22b9b653541f4a1"/>
         </sources>
         
         <patches>
@@ -34,6 +34,7 @@
         </patches>
 
         <requires>
+            <package name="autoconf"/>
             <package name="autotools-dev"/>
             <package name="libattr1-dev"/>
             <package name="linux-kernel-headers"/>
