--- a/f/libffi/package.xml
+++ b/f/libffi/package.xml
@@ -22,7 +22,7 @@
             <file src="libffi-3.2.1.tar.gz" subdir="sources"
                 sha256sum="d06ebb8e1d9a22d19e38d63fdb83954253f39bedc5d46232a05645685722ca37"/>
             <file src="patches.06.tar.gz" subdir="patches"
-                sha256sum="d95307bf84d2295d987021399188093a06eba0a0260942b8db6384cf1f3dab08"/>
+                sha256sum="35c250f5ca37da05d882bfe507b25632a1c7c23e706d6603097a9d28d01932b4"/>
         </sources>
         
         <patches>
@@ -36,6 +36,7 @@
         </patches>
 
         <requires>
+            <package name="autoconf"/>
             <package name="libltdl-dev"/>
             <package name="dejagnu"/>
             <package name="texinfo"/>
