--- a/e/expect/package.xml
+++ b/e/expect/package.xml
@@ -22,9 +22,9 @@
             <file src="expect-5.45.tar.gz" subdir="sources"
                 sha256sum="b28dca90428a3b30e650525cdc16255d76bb6ccd65d448be53e620d95d5cc040"/>
             <file src="patches.07.tar.gz" subdir="patches"
-                sha256sum="fd89ad4f59bf30f503efd439055a23c8519d217ac8b86753dd5852ec359dd39c"/>
-            <file src="patches.extra.tar.gz" subdir="patches"
-                sha256sum="5468e825ec77cbcdea487313f482764985126eb4d774929fdeae9d1df3aaa117"/>
+                sha256sum="bb46f722615ca90e43b3e4f9fa01a6acb451b649d7f22328b821d34f91f0383d"/>
+            <file src="patches.bolt.tar.gz" subdir="patches"
+                sha256sum="cbbe6e9db23c3de1622cd319fbdf02ef2c1b8e38fd2ff392c126640403b51b63"/>
         </sources>
 
         <patches>
