--- a/g/gcc/6/package.xml
+++ b/g/gcc/6/package.xml
@@ -19,6 +19,8 @@
                 sha256sum="d6c720212539518b3390885b558053ecaddb5a7c8768407ce7c59139cf54f6be"/>
             <file src="patches.07.tar.gz" subdir="patches"
                 sha256sum="251ffc2b7c3339ec6412106241a8c66a8df047359d06e264b1b3a148c6077293"/>
+            <file src="patches.bolt.tar.gz" subdir="patches"
+                sha256sum="9b227119714e4987a173ab48134407f803e58289b4e3a206ba7374f8a42de1bb"/>
         </sources>
 
         <patches>
@@ -137,6 +139,9 @@
                 <file src="patches/go-testsuite.diff"/>
                 <file src="patches/ada-749574.diff"/>
                 <file src="patches/ada-mips.diff"/>
+
+                <!-- Bolt OS -->
+                <file src="patches/fix-libgo-mksysinfo-musl.diff"/>
             </patchset>
         </patches>
 
