gcc/6: add libgo-squash-cast-qual.diff

--- a/g/gcc/6/package.xml
+++ b/g/gcc/6/package.xml
@@ -19,7 +19,7 @@
             <file src="patches.06.tar.gz" subdir="patches"
                 sha256sum="b268bc8bab68e41a70acf2a9d3e186f46f3a2a638f645cddebd2345c9aef508d"/>
             <file src="patches.bolt.tar.gz" subdir="patches"
-                sha256sum="9b227119714e4987a173ab48134407f803e58289b4e3a206ba7374f8a42de1bb"/>
+                sha256sum="06ec4567763e9cf8c0d16fcbad57f918a50fb10090849791231939f80c6c6999"/>
         </sources>
 
         <patches>
@@ -138,6 +138,7 @@
 
                 <!-- Bolt OS -->
                 <file src="patches/fix-libgo-mksysinfo-musl.diff"/>
+                <file src="patches/libgo-squash-cast-qual.diff"/>
             </patchset>
         </patches>
 
