--- a/c/curl/package.xml
+++ b/c/curl/package.xml
@@ -58,7 +58,7 @@
             <package name="libpsl-dev"/>
             <package name="librtmp-dev" version=">= 2.4+20131018.git79459a2-3~"/>
             <package name="libssh2-1-dev"/>
-            <package name="libssl1.0-dev" version="<< 1.1"/>
+            <package name="libssl1.0-dev" version="&lt;&lt; 1.1"/>
             <package name="libtool"/>
             <package name="python"/>
             <package name="zlib1g-dev"/>
