linux/headers: update package rules

--- a/l/linux/4.4-lts/package.xml
+++ b/l/linux/4.4-lts/package.xml
@@ -24,10 +24,10 @@
             </patchset>
         </patches>
 
-        <!-- build rules -->
         <xi:include href="rules.xml"/>
     </source>
 
-    <!-- changelog -->
+    <xi:include href="linux-system-headers.xml"/>
+
     <xi:include href="changelog.xml"/>
 </control>
