--- a/m/musl/package.xml
+++ b/m/musl/package.xml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <control xmlns:xi="http://www.w3.org/2001/XInclude">
-
-    <defines>
-        <def name="BOLT_BUILD_DIR" value="build"/>
-    </defines>
-
     <source name="musl" architecture-independent="false">
         <description>
             <summary>A small, standards-conformling libc for Linux</summary>
@@ -43,6 +38,9 @@
 
         <xi:include href="rules.xml"/>
     </source>
+
+    <xi:include href="musl-libc.xml"/>
+    <xi:include href="musl-libc-dev.xml"/>
 
     <xi:include href="changelog.xml"/>
 </control>
