--- a/b/busybox/package.xml
+++ b/b/busybox/package.xml
@@ -21,6 +21,8 @@
         <sources>
             <file src="busybox-1.22.0.tar.bz2" subdir="sources"
                 sha256sum="92f00cd391b7d5fa2215c8450abe2ba15f9d16c226e8855fb21b6c9a5b723a53"/>
+            <file src="bolt-extra.tar.gz" subdir="sources"
+                sha256sum="c4c1ca43f2cb79a9198e7d7f96f7f7112b244b66d263a6ef30b4a7bbacc5f94b"/>
             <file src="patches.19.tar.gz" subdir="patches"
                 sha256sum="f0cd9e113f3281b9586d02eea1f42a822dd5f26a89acb0b58d84b898cbc1cdd4"/>
             <file src="patches.bolt.tar.gz" subdir="patches"
