--- a/m/mpfr4/package.xml
+++ b/m/mpfr4/package.xml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <control xmlns:xi="http://www.w3.org/2001/XInclude">
-    <defines>
-        <def name="BOLT_BUILD_DIR" value="build"/>
-    </defines>
-
     <source name="mpfr4" architecture-independent="false">
         <description>
             <summary>multiple precision floating-point computation</summary>
             <p>
             MPFR provides a library for multiple-precision floating-point computation
-            with correct rounding.  The computation is both efficient and has a
+            with correct rounding. The computation is both efficient and has a
             well-defined semantics. It copies the good ideas from the
             ANSI/IEEE-754 standard for double-precision floating-point arithmetic
             (53-bit mantissa).
@@ -23,13 +19,13 @@
 
         <requires>
             <package name="libgmp-dev"/>
-            <package name="autoconf"/>
         </requires>
 
-        <!-- build rules -->
         <xi:include href="rules.xml"/>
     </source>
 
-    <!-- changelog -->
+    <xi:include href="libmpfr4.xml"/>
+    <xi:include href="libmpfr-dev.xml"/>
+
     <xi:include href="changelog.xml"/>
-</control> 
+</control>
